--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ html {
 
 #skillset {
   overflow: hidden;
-  background: var(--color-cyan);
+  background: linear-gradient(to top, var(--color-cyan), var(--color-white));
   padding: 50px 0;
   position: relative; }
 
