--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -28,7 +28,7 @@
 }
 #skillset {
   overflow: hidden;
-  background: var(--color-cyan);
+  background: linear-gradient(to top, var(--color-cyan), var(--color-white));
   padding: 50px 0;
   position: relative;
 }
